Fix the input border color on ios

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,7 +15,7 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 
-.alert-md .alert-wrapper{
+.alert-md .alert-wrapper {
     max-width: none;
 }
 
@@ -25,7 +25,7 @@
     padding-top: 21px !important;
 }
 
-.item-md.error-border .item-inner{
+.item.error-border .item-inner{
     border-bottom-color: red !important;
     -webkit-box-shadow: inset 0 -1px 0 0 red !important;
     box-shadow: red !important;
@@ -35,7 +35,7 @@
     color: red;
 }
 
-.item-md.item-select:not(.error-border):not(.no-color-border) .item-inner .ng-valid .item-cover{
+.item.item-select:not(.error-border):not(.no-color-border) .item-inner .ng-valid .item-cover{
     border-bottom-color: #32db64 !important;
     -webkit-box-shadow: inset 0 -1px 0 0 #32db64 !important;
     box-shadow: inset 0 -1px 0 0 #32db64 !important;
@@ -43,7 +43,7 @@
     border-bottom: 1px solid;
 }
 
-.item-md.item-input.valid-border .item-inner{
+.item.item-input.valid-border .item-inner{
     border-bottom-color: #32db64 !important;
     -webkit-box-shadow: inset 0 -1px 0 0 #32db64 !important;
     box-shadow: inset 0 -1px 0 0 #32db64 !important;
@@ -189,6 +189,10 @@
 
     p,div {
         color: #949494;
+    }
+
+    .progress-inner {
+        color: white;
     }
 
     .alert-md{
@@ -341,6 +345,10 @@
 
     p,div {
         color: #0f8082;
+    }
+
+    .progress-inner {
+        color: white;
     }
 
     .alert-md{
